# Kimera-VIO

./: .gitignore  README.md
Kimera-Vio/scripts/: stereoVIOEuroc.bash
kimera-vio-old/include/kimera-vio/utils/: UtilsNumerical.h
kimera-vio-old/src/backend/: VioBackend.cpp
kimera-vio-old/src/frontend/: RgbdCamera.cpp  Tracker.cpp  VisionImuFrontend.cpp
kimera-vio-old/src/mesh/: Mesher.cpp
kimera-vio-old/src/utils/: UtilsNumerical.cpp
kimera-vio-old/tests/: testTracker.cpp
kimera-vio/include/kimera-vio/frontend/: RgbdCamera.h
kimera-vio/include/kimera-vio/mesh/: MeshOptimization.h
kimera-vio/include/kimera-vio/utils/: UtilsNumerical.h
kimera-vio/tests/: testOpticalFlowPredictor.cpp
test/: CMakeLists.txt  test_kimera.cpp
